; ModuleID = '/home/carl/AnghaBench/FFmpeg/fftools/extr_ffmpeg_opt.c_read_file.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/fftools/extr_ffmpeg_opt.c_read_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@AVIO_FLAG_READ = common dso_local global i32 0, align 4
@AV_LOG_ERROR = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [24 x i8] c"Error opening file %s.\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32* (i8*)* @read_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32* @read_file(i8* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i8*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca [1024 x i32], align 16
  %8 = alloca i32*, align 8
  store i8* %0, i8** %3, align 8
  store i32* null, i32** %4, align 8
  store i32* null, i32** %5, align 8
  %9 = load i8*, i8** %3, align 8
  %10 = load i32, i32* @AVIO_FLAG_READ, align 4
  %11 = call i32 @avio_open(i32** %4, i8* %9, i32 %10)
  store i32 %11, i32* %6, align 4
  %12 = load i32, i32* %6, align 4
  %13 = icmp slt i32 %12, 0
  br i1 %13, label %14, label %18

14:                                               ; preds = %1
  %15 = load i32, i32* @AV_LOG_ERROR, align 4
  %16 = load i8*, i8** %3, align 8
  %17 = call i32 @av_log(i32* null, i32 %15, i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str, i64 0, i64 0), i8* %16)
  store i32* null, i32** %2, align 8
  br label %46

18:                                               ; preds = %1
  %19 = call i32 @avio_open_dyn_buf(i32** %5)
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* %6, align 4
  %21 = icmp slt i32 %20, 0
  br i1 %21, label %22, label %24

22:                                               ; preds = %18
  %23 = call i32 @avio_closep(i32** %4)
  store i32* null, i32** %2, align 8
  br label %46

24:                                               ; preds = %18
  br label %25

25:                                               ; preds = %30, %24
  %26 = load i32*, i32** %4, align 8
  %27 = getelementptr inbounds [1024 x i32], [1024 x i32]* %7, i64 0, i64 0
  %28 = call i32 @avio_read(i32* %26, i32* %27, i32 4096)
  store i32 %28, i32* %6, align 4
  %29 = icmp sgt i32 %28, 0
  br i1 %29, label %30, label %35

30:                                               ; preds = %25
  %31 = load i32*, i32** %5, align 8
  %32 = getelementptr inbounds [1024 x i32], [1024 x i32]* %7, i64 0, i64 0
  %33 = load i32, i32* %6, align 4
  %34 = call i32 @avio_write(i32* %31, i32* %32, i32 %33)
  br label %25

35:                                               ; preds = %25
  %36 = load i32*, i32** %5, align 8
  %37 = call i32 @avio_w8(i32* %36, i32 0)
  %38 = call i32 @avio_closep(i32** %4)
  %39 = load i32*, i32** %5, align 8
  %40 = call i32 @avio_close_dyn_buf(i32* %39, i32** %8)
  store i32 %40, i32* %6, align 4
  %41 = load i32, i32* %6, align 4
  %42 = icmp slt i32 %41, 0
  br i1 %42, label %43, label %44

43:                                               ; preds = %35
  store i32* null, i32** %2, align 8
  br label %46

44:                                               ; preds = %35
  %45 = load i32*, i32** %8, align 8
  store i32* %45, i32** %2, align 8
  br label %46

46:                                               ; preds = %44, %43, %22, %14
  %47 = load i32*, i32** %2, align 8
  ret i32* %47
}

declare dso_local i32 @avio_open(i32**, i8*, i32) #1

declare dso_local i32 @av_log(i32*, i32, i8*, i8*) #1

declare dso_local i32 @avio_open_dyn_buf(i32**) #1

declare dso_local i32 @avio_closep(i32**) #1

declare dso_local i32 @avio_read(i32*, i32*, i32) #1

declare dso_local i32 @avio_write(i32*, i32*, i32) #1

declare dso_local i32 @avio_w8(i32*, i32) #1

declare dso_local i32 @avio_close_dyn_buf(i32*, i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
